Fix unordered list alignment

--- a/_/components/less/_superrichth.less
+++ b/_/components/less/_superrichth.less
@@ -901,12 +901,12 @@ h3.news-tab {
   margin-left: 10px;
 }
 
-.social-icons-footer {
+.social-icons-footer > ul {
   float: right;
 
   @media (max-width: 1199px) {
-    float: left;
-    padding-left: 0;
+    float: none;
+    padding: 0;
   }
 }
 
